// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BadgedIcon matches the last snapshot with the badge 1`] = `
<View>
  <Icon
    name="Notifications"
    onPress={[Function]}
    showBadge={true}
  />
  <View>
    <View />
  </View>
</View>
`;

exports[`BadgedIcon matches the last snapshot without the badge 1`] = `
<View>
  <Icon
    name="Notifications"
    onPress={[Function]}
  />
</View>
`;
